[project]
name = "homework-agent"
version = "1.0.0"
description = "Langchain Agent with Wikipedia and SQL Database Tools - AI Developer Homework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.13",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.13",
    "python-dotenv>=1.0.0",
    "wikipedia>=1.4.0",
]
